// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders \`accessibilityLabel\` 1`] = `
<ModalCurtain
  accessibilityLabel="goosegoosegoose"
  onCloseClick={[Function]}
  shouldCloseOnEscape={true}
  stage="exited"
>
  <Portal
    containerInfo={
      <body>
        <div
          aria-label="Modal"
          role="dialog"
          tabindex="-1"
        />
        <div
          aria-label="Modal"
          role="dialog"
          tabindex="-1"
        />
        <div
          aria-label="Modal"
          role="dialog"
          tabindex="-1"
        />
        <div
          aria-label="Modal"
          role="dialog"
          tabindex="-1"
        />
        <div
          aria-label="Modal"
          role="dialog"
          tabindex="-1"
        />
        <div
          aria-label="goosegoosegoose"
          role="dialog"
          tabindex="-1"
        />
      </body>
    }
  >
    <FocusTrap
      _createFocusTrap={[Function]}
      active={false}
      focusTrapOptions={
        Object {
          "clickOutsideDeactivates": true,
          "initialFocus": [Function],
        }
      }
      paused={false}
    >
      <div
        aria-label="goosegoosegoose"
        role="dialog"
        tabIndex="-1"
      />
    </FocusTrap>
  </Portal>
</ModalCurtain>
`;

exports[`renders a basic curtain 1`] = `
<ModalCurtain
  accessibilityLabel="Modal"
  onCloseClick={[Function]}
  shouldCloseOnEscape={true}
  stage="exited"
>
  <Portal
    containerInfo={
      <body>
        <div
          aria-label="Modal"
          role="dialog"
          tabindex="-1"
        />
      </body>
    }
  >
    <FocusTrap
      _createFocusTrap={[Function]}
      active={false}
      focusTrapOptions={
        Object {
          "clickOutsideDeactivates": true,
          "initialFocus": [Function],
        }
      }
      paused={false}
    >
      <div
        aria-label="Modal"
        role="dialog"
        tabIndex="-1"
      />
    </FocusTrap>
  </Portal>
</ModalCurtain>
`;

exports[`renders modal in \`entered\` stage 1`] = `
<ModalCurtain
  accessibilityLabel="Modal"
  onCloseClick={[Function]}
  shouldCloseOnEscape={true}
  stage="entered"
>
  <Portal
    containerInfo={
      <body>
        <div
          aria-label="Modal"
          role="dialog"
          tabindex="-1"
        />
        <div
          aria-label="Modal"
          role="dialog"
          tabindex="-1"
        />
        <div
          aria-label="Modal"
          role="dialog"
          tabindex="-1"
        />
        <div
          aria-label="Modal"
          role="dialog"
          tabindex="-1"
        />
      </body>
    }
  >
    <FocusTrap
      _createFocusTrap={[Function]}
      active={true}
      focusTrapOptions={
        Object {
          "clickOutsideDeactivates": true,
          "initialFocus": [Function],
        }
      }
      paused={false}
    >
      <div
        aria-label="Modal"
        role="dialog"
        tabIndex="-1"
      >
        <EscListener
          onEscPress={[Function]}
        />
        <NoScroll />
      </div>
    </FocusTrap>
  </Portal>
</ModalCurtain>
`;

exports[`renders modal in \`entering\` stage 1`] = `
<ModalCurtain
  accessibilityLabel="Modal"
  onCloseClick={[Function]}
  shouldCloseOnEscape={true}
  stage="entering"
>
  <Portal
    containerInfo={
      <body>
        <div
          aria-label="Modal"
          role="dialog"
          tabindex="-1"
        />
        <div
          aria-label="Modal"
          role="dialog"
          tabindex="-1"
        />
        <div
          aria-label="Modal"
          role="dialog"
          tabindex="-1"
        />
      </body>
    }
  >
    <FocusTrap
      _createFocusTrap={[Function]}
      active={false}
      focusTrapOptions={
        Object {
          "clickOutsideDeactivates": true,
          "initialFocus": [Function],
        }
      }
      paused={false}
    >
      <div
        aria-label="Modal"
        role="dialog"
        tabIndex="-1"
      >
        <EscListener
          onEscPress={[Function]}
        />
        <NoScroll />
      </div>
    </FocusTrap>
  </Portal>
</ModalCurtain>
`;

exports[`renders modal in \`exited\` stage 1`] = `
<ModalCurtain
  accessibilityLabel="Modal"
  onCloseClick={[Function]}
  shouldCloseOnEscape={true}
  stage="exited"
>
  <Portal
    containerInfo={
      <body>
        <div
          aria-label="Modal"
          role="dialog"
          tabindex="-1"
        />
        <div
          aria-label="Modal"
          role="dialog"
          tabindex="-1"
        />
      </body>
    }
  >
    <FocusTrap
      _createFocusTrap={[Function]}
      active={false}
      focusTrapOptions={
        Object {
          "clickOutsideDeactivates": true,
          "initialFocus": [Function],
        }
      }
      paused={false}
    >
      <div
        aria-label="Modal"
        role="dialog"
        tabIndex="-1"
      />
    </FocusTrap>
  </Portal>
</ModalCurtain>
`;

exports[`renders modal in \`exiting\` stage 1`] = `
<ModalCurtain
  accessibilityLabel="Modal"
  onCloseClick={[Function]}
  shouldCloseOnEscape={true}
  stage="exiting"
>
  <Portal
    containerInfo={
      <body>
        <div
          aria-label="Modal"
          role="dialog"
          tabindex="-1"
        />
        <div
          aria-label="Modal"
          role="dialog"
          tabindex="-1"
        />
        <div
          aria-label="Modal"
          role="dialog"
          tabindex="-1"
        />
        <div
          aria-label="Modal"
          role="dialog"
          tabindex="-1"
        />
        <div
          aria-label="Modal"
          role="dialog"
          tabindex="-1"
        />
      </body>
    }
  >
    <FocusTrap
      _createFocusTrap={[Function]}
      active={false}
      focusTrapOptions={
        Object {
          "clickOutsideDeactivates": true,
          "initialFocus": [Function],
        }
      }
      paused={false}
    >
      <div
        aria-label="Modal"
        role="dialog"
        tabIndex="-1"
      />
    </FocusTrap>
  </Portal>
</ModalCurtain>
`;

exports[`renders text that is passed in 1`] = `
<div>
  <button
    type="button"
  />
  <ModalCurtain
    accessibilityLabel="Modal"
    onCloseClick={[Function]}
    shouldCloseOnEscape={true}
    stage="exited"
  >
    <Portal
      containerInfo={
        <body>
          <div
            aria-label="Modal"
            role="dialog"
            tabindex="-1"
          />
          <div
            aria-label="Modal"
            role="dialog"
            tabindex="-1"
          />
          <div
            aria-label="Modal"
            role="dialog"
            tabindex="-1"
          />
          <div
            aria-label="Modal"
            role="dialog"
            tabindex="-1"
          />
          <div
            aria-label="Modal"
            role="dialog"
            tabindex="-1"
          />
          <div
            aria-label="goosegoosegoose"
            role="dialog"
            tabindex="-1"
          />
          <div
            aria-label="Modal"
            role="dialog"
            tabindex="-1"
          />
          <div
            aria-label="Modal"
            role="dialog"
            tabindex="-1"
          >
            <button
              data-test-id="goose"
              type="button"
            />
          </div>
          <div
            aria-label="Modal"
            role="dialog"
            tabindex="-1"
          >
            Goose
          </div>
        </body>
      }
    >
      <FocusTrap
        _createFocusTrap={[Function]}
        active={false}
        focusTrapOptions={
          Object {
            "clickOutsideDeactivates": true,
            "initialFocus": [Function],
          }
        }
        paused={false}
      >
        <div
          aria-label="Modal"
          role="dialog"
          tabIndex="-1"
        >
          Goose
        </div>
      </FocusTrap>
    </Portal>
  </ModalCurtain>
</div>
`;
